--- a/styles/style.css
+++ b/styles/style.css
@@ -3,12 +3,15 @@
 html {
   font-size: 62.5%;
 }
-.main {
+main {
   display: flex;
   flex-direction: column;
-  max-height: 94rem;
-  max-width: 140rem;
-  padding: 13.8rem 13.8rem 12rem 12rem;
+  justify-content: space-around;
+  margin: 3% auto;
+  width: 80%;
+  padding: 7%;
+
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 header {
   color: #171717;
@@ -21,26 +24,42 @@ section {
   font-family: Lato;
   opacity: 0.7;
   color: #171717;
-  letter-spacing: -0.09px;
-  line-height: 34px;
+
+  line-height: 3rem;
   font-size: 18px;
   font-weight: 300;
 }
 section::first-letter {
   color: #171717;
-  line-height: 34px;
+  opacity: 1;
   font-family: "Playfair Display";
   text-transform: uppercase;
   font-size: 11rem;
-  letter-spacing: -0.55px;
+
   float: left;
+  margin-right: 3px;
 }
 .quote {
-  font-size: 6rem;
+  font-size: 24px;
   font-style: italic;
-  letter-spacing: -0.3px;
-  line-height: 4rem;
-  text-decoration: none;
+  letter-spacing: -0.12px;
+  line-height: 34px;
+  opacity: 0.7;
+}
+.quote-sign {
+  font-style: italic;
+  letter-spacing: -0.09px;
+  line-height: 40px;
+  font-size: 60px;
+}
+.btn {
+  width: 26rem;
+  height: 6.5rem;
+  border: 1px solid #eaa258;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3rem;
 }
 .button {
   font-family: Lato;
@@ -48,4 +67,5 @@ section::first-letter {
   font-family: Lato;
   font-size: 18px;
   text-transform: uppercase;
+  text-decoration: none;
 }
