--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,8 @@ main {
   flex-direction: column;
   justify-content: space-around;
   margin: 3% auto;
-  width: 80%;
+  width: 70%;
+  height: 70%;
   padding: 7%;
 
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
