--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,7 @@ main {
   width: 70%;
   height: 70%;
   padding: 7%;
+  max-width: 1400px;
 
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
